--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.5
   async: ^2.9.0
-
+  dio: ^4.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
